added index head details + style and script sources

--- a/index.html
+++ b/index.html
@@ -1,43 +1,54 @@
-<head></head>
+<!DOCTYPE html>
+<html>    
+    <head>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, inital-scale=1.0"/>
+        <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+        <title>Calculator</title>
+        <link rel="stylesheet" href="stylesheets/reset.css"/>
+        <link rel="stylesheet" href="stylesheets/style.css"/>
+    </head>
 
-<main>
-    <body>
-        <div id="background">
-            <div id="calculator-body">
-                <div id="normal">
-                    <div id="screen"></div>                    
-                    <div id="buttons">
-                        <div id="numbers">
-                            <div class="number">7</div>
-                            <div class="number">8</div>
-                            <div class="number">9</div>
-                            <div class="number">4</div>
-                            <div class="number">5</div>
-                            <div class="number">6</div>
-                            <div class="number">1</div>
-                            <div class="number">2</div>
-                            <div class="number">3</div>
-                            <div class="number">0</div>
-                        </div>
-                        <div id="functions">
-                            <div class="function">C</div>
-                            <div class="function">CE</div>
-                            <div class="function">^-1</div>
-                            <div class="function">^2</div>
-                            <div class="function">sqrt</div>
-                            <div class="function">x</div>
-                            <div class="function">%</div>
-                            <div class="function">+</div>
-                            <div class="function">-</div>
-                            <div class="function">=</div>
+    <main>
+        <body>
+            <div id="background">
+                <div id="calculator-body">
+                    <div id="normal">
+                        <div id="screen"></div>                    
+                        <div id="buttons">
+                            <div id="numbers">
+                                <div class="number">7</div>
+                                <div class="number">8</div>
+                                <div class="number">9</div>
+                                <div class="number">4</div>
+                                <div class="number">5</div>
+                                <div class="number">6</div>
+                                <div class="number">1</div>
+                                <div class="number">2</div>
+                                <div class="number">3</div>
+                                <div class="number">0</div>
+                            </div>
+                            <div id="functions">
+                                <div class="function">C</div>
+                                <div class="function">CE</div>
+                                <div class="function">^-1</div>
+                                <div class="function">^2</div>
+                                <div class="function">sqrt</div>
+                                <div class="function">x</div>
+                                <div class="function">%</div>
+                                <div class="function">+</div>
+                                <div class="function">-</div>
+                                <div class="function">=</div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div id="scientific">
-                    <div id="screen"></div>
-                    <div id="buttons"></div>
+                    <div id="scientific">
+                        <div id="screen"></div>
+                        <div id="buttons"></div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </body>
-</main>
+        </body>
+        <script src="scripts/script.css"
+    </main>
+</html>
