--- a/index.html
+++ b/index.html
@@ -9,36 +9,38 @@
         <link rel="stylesheet" href="stylesheets/style.css"/>
     </head>
 
-    <main>
-        <body>
+    <body>
+        <main>
             <div id="background">
                 <div id="calculator-body">
                     <div id="normal">
-                        <div id="screen"></div>                    
+                        <div id="display-frame">
+                            <div id="display">0000000000</div>
+                        </div>                    
                         <div id="buttons">
                             <div id="numbers">
-                                <div class="number">7</div>
-                                <div class="number">8</div>
-                                <div class="number">9</div>
-                                <div class="number">4</div>
-                                <div class="number">5</div>
-                                <div class="number">6</div>
-                                <div class="number">1</div>
-                                <div class="number">2</div>
-                                <div class="number">3</div>
-                                <div class="number">0</div>
+                                <button class="number" id="seven">7</button>
+                                <button class="number" id="eight">8</button>
+                                <button class="number" id="nine">9</button>
+                                <button class="number" id="four">4</button>
+                                <button class="number" id="five">5</button>
+                                <button class="number" id="six">6</button>
+                                <button class="number" id="one">1</button>
+                                <button class="number" id="two">2</button>
+                                <button class="number" id="three">3</button>
+                                <button class="number" id="zero">0</button>
                             </div>
                             <div id="functions">
-                                <div class="function">C</div>
-                                <div class="function">CE</div>
-                                <div class="function">^-1</div>
-                                <div class="function">^2</div>
-                                <div class="function">sqrt</div>
-                                <div class="function">x</div>
-                                <div class="function">%</div>
-                                <div class="function">+</div>
-                                <div class="function">-</div>
-                                <div class="function">=</div>
+                                <button class="function" id="clear">C</button>
+                                <button class="function" id="clear-all">CE</button>
+                                <button class="function" id="inverse">^-1</button>
+                                <button class="function" id="square">^2</button>
+                                <button class="function" id="square-root">sqrt</button>
+                                <button class="function" id="multiply">x</button>
+                                <button class="function" id="divide">%</button>
+                                <button class="function" id="plus">+</button>
+                                <button class="function" id="minus">-</button>
+                                <button class="function" id="equals">=</button>
                             </div>
                         </div>
                     </div>
@@ -48,7 +50,7 @@
                     </div>
                 </div>
             </div>
-        </body>
-        <script src="scripts/script.css"
-    </main>
+        </main>
+        <script src="scripts/script.js"></script>
+    </body>
 </html>
