--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
                         </div>                    
                         <div id="buttons">
                             <div id="numbers">
-                                <button class="number" id="seven">7</button>
-                                <button class="number" id="eight">8</button>
-                                <button class="number" id="nine">9</button>
-                                <button class="number" id="four">4</button>
-                                <button class="number" id="five">5</button>
-                                <button class="number" id="six">6</button>
-                                <button class="number" id="one">1</button>
-                                <button class="number" id="two">2</button>
-                                <button class="number" id="three">3</button>
-                                <button class="number" id="zero">0</button>
+                                <button class="number" id="7">7</button>
+                                <button class="number" id="8">8</button>
+                                <button class="number" id="9">9</button>
+                                <button class="number" id="4">4</button>
+                                <button class="number" id="5">5</button>
+                                <button class="number" id="6">6</button>
+                                <button class="number" id="1">1</button>
+                                <button class="number" id="2">2</button>
+                                <button class="number" id="3">3</button>
+                                <button class="number" id="0">0</button>
                             </div>
                             <div id="functions">
                                 <button class="function" id="clear">C</button>
