--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
                         </div>                    
                         <div id="buttons">
                             <div id="numbers">
-                                <button class="number" id="7">7</button>
-                                <button class="number" id="8">8</button>
-                                <button class="number" id="9">9</button>
-                                <button class="number" id="4">4</button>
-                                <button class="number" id="5">5</button>
-                                <button class="number" id="6">6</button>
-                                <button class="number" id="1">1</button>
-                                <button class="number" id="2">2</button>
-                                <button class="number" id="3">3</button>
-                                <button class="number" id="0">0</button>
+                                <button class="number" id="seven" name="7">7</button>
+                                <button class="number" id="eight" name="8">8</button>
+                                <button class="number" id="nine" name="9">9</button>
+                                <button class="number" id="four" name="4">4</button>
+                                <button class="number" id="five" name="5">5</button>
+                                <button class="number" id="six" name="6">6</button>
+                                <button class="number" id="one" name="1">1</button>
+                                <button class="number" id="two" name="2">2</button>
+                                <button class="number" id="three" name="3">3</button>
+                                <button class="number" id="zero" name="0">0</button>
+                                <button class="number" id="decimal" name=".">.</button>
                             </div>
                             <div id="functions">
                                 <button class="function" id="clear">C</button>
