--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div id="calculator-body">
                     <div id="normal">
                         <div id="display-frame">
-                            <div id="display">0000000000</div>
+                            <div id="display">0</div>
                         </div>                    
                         <div id="buttons">
                             <div id="numbers">
