changing the switch function for operation inputs

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
                                 <button class="number" id="decimal" name=".">.</button>
                             </div>
                             <div id="functions">
-                                <button class="function" id="clear">C</button>
-                                <button class="function" id="clear-all">CE</button>
-                                <button class="function" id="inverse">^-1</button>
-                                <button class="function" id="square">^2</button>
-                                <button class="function" id="square-root">sqrt</button>
-                                <button class="function" id="multiply">x</button>
-                                <button class="function" id="divide">%</button>
-                                <button class="function" id="plus">+</button>
-                                <button class="function" id="minus">-</button>
-                                <button class="function" id="equals">=</button>
+                                <button class="function" id="clear" name"C">C</button>
+                                <button class="function" id="clear-all" name"CE">CE</button>
+                                <button class="function" id="inverse" name="num/1">^-1</button>
+                                <button class="function" id="square" name="square">^2</button>
+                                <button class="function" id="square-root" name="Math.sqrt()">sqrt</button>
+                                <button class="function" id="multiply" name="*">x</button>
+                                <button class="function" id="divide" name="/">%</button>
+                                <button class="function" id="plus" name="+">+</button>
+                                <button class="function" id="minus" name="-">-</button>
+                                <button class="function" id="equals" name="=">=</button>
                             </div>
                         </div>
                     </div>
