fixed missing equals signs for operator button names

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                                 <button class="number" id="decimal" name=".">.</button>
                             </div>
                             <div id="functions">
-                                <button class="function" id="clear" name"C">C</button>
-                                <button class="function" id="clear-all" name"CE">CE</button>
+                                <button class="function" id="clear" name="C">C</button>
+                                <button class="function" id="clear-all" name="CE">CE</button>
                                 <button class="function" id="inverse" name="num/1">^-1</button>
                                 <button class="function" id="square" name="square">^2</button>
                                 <button class="function" id="square-root" name="Math.sqrt()">sqrt</button>
