--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                                 <button class="number" id="decimal" name=".">.</button>
                             </div>
                             <div id="functions">
-                                <button class="function" id="clear" name="C">C</button>
-                                <button class="function" id="clear-all" name="CE">CE</button>
-                                <button class="function" id="square" name="square">^2</button>
-                                <button class="function" id="square-root" name="Math.sqrt()">sqrt</button>
+                                <button class="modify" id="clear" name="C">C</button>
+                                <button class="modify" id="clear-all" name="CE">CE</button>
+                                <button class="modify" id="square" name="square">^2</button>
+                                <button class="modify" id="square-root" name="Math.sqrt()">sqrt</button>
                                 <button class="function" id="multiply" name="*">x</button>
                                 <button class="function" id="divide" name="/">%</button>
                                 <button class="function" id="plus" name="+">+</button>
