basic functions now working again

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <button class="function" id="divide" name="/">%</button>
                                 <button class="function" id="plus" name="+">+</button>
                                 <button class="function" id="minus" name="-">-</button>
-                                <button class="function" id="equals" name="=">=</button>
+                                <button class="modify" id="equals" name="=">=</button>
                             </div>
                     </div>                    
                 </div>
