--- a/index.html
+++ b/index.html
@@ -8,43 +8,41 @@
         <link rel="stylesheet" href="stylesheets/reset.css"/>
         <link rel="stylesheet" href="stylesheets/style.css"/>
     </head>
-
+    
     <body>
-        <main>
-            <div id="background">
-                <div id="calculator-body">                    
-                    <div id="display-frame">
-                        <div id="display">0</div>
-                    </div>                    
-                    <div id="buttons">
-                            <div id="numbers">
-                                <button class="number" id="seven" name="7">7</button>
-                                <button class="number" id="eight" name="8">8</button>
-                                <button class="number" id="nine" name="9">9</button>
-                                <button class="number" id="four" name="4">4</button>
-                                <button class="number" id="five" name="5">5</button>
-                                <button class="number" id="six" name="6">6</button>
-                                <button class="number" id="one" name="1">1</button>
-                                <button class="number" id="two" name="2">2</button>
-                                <button class="number" id="three" name="3">3</button>
-                                <button class="number" id="zero" name="0">0</button>
-                                <button class="number" id="decimal" name=".">.</button>
-                            </div>
-                            <div id="functions">
-                                <button class="modify" id="clear" name="C">C</button>
-                                <button class="modify" id="clear-all" name="CE">CE</button>
-                                <button class="modify" id="square" name="square">^2</button>
-                                <button class="modify" id="square-root" name="Math.sqrt()">sqrt</button>
-                                <button class="function" id="multiply" name="*">x</button>
-                                <button class="function" id="divide" name="/">%</button>
-                                <button class="function" id="plus" name="+">+</button>
-                                <button class="function" id="minus" name="-">-</button>
-                                <button class="modify" id="equals" name="=">=</button>
-                            </div>
-                    </div>                    
+        <main id="background">
+            <div id="calculator-body">                    
+            <div id="display-frame">
+                <div id="display">0</div>
+            </div>                    
+            <div id="buttons">
+                <div id="numbers">
+                    <button class="number" id="seven" name="7">7</button>
+                    <button class="number" id="eight" name="8">8</button>
+                    <button class="number" id="nine" name="9">9</button>
+                    <button class="number" id="four" name="4">4</button>
+                    <button class="number" id="five" name="5">5</button>
+                    <button class="number" id="six" name="6">6</button>
+                    <button class="number" id="one" name="1">1</button>
+                    <button class="number" id="two" name="2">2</button>
+                    <button class="number" id="three" name="3">3</button>
+                    <button class="number" id="zero" name="0">0</button>
+                    <button class="number" id="decimal" name=".">.</button>
                 </div>
-            </div>
-        </main>
-        <script src="scripts/script.js"></script>
-    </body>
+                <div id="functions">
+                    <button class="modify" id="clear" name="C">C</button>
+                    <button class="modify" id="clear-all" name="CE">CE</button>
+                    <button class="modify" id="square" name="square">^2</button>
+                    <button class="modify" id="square-root" name="Math.sqrt()">sqrt</button>
+                    <button class="function" id="multiply" name="*">x</button>
+                    <button class="function" id="divide" name="/">%</button>
+                    <button class="function" id="plus" name="+">+</button>
+                    <button class="function" id="minus" name="-">-</button>
+                    <button class="modify" id="equals" name="=">=</button>
+                </div>
+            </div>                    
+        </div>
+    </main>
+    <script src="scripts/script.js"></script>
+</body>
 </html>
