more styling; box shadows on divs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <main id="background">
             <div id="calculator-body">  
                 <div id="calculator-top">
-                    <div id="logo">Mathifier</div>
+                    <div id="logo">Mathiplier</div>
                     <div id="solar">
                         <div class="solar-panel"></div>
                         <div class="solar-panel"></div>
