--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <meta name="viewport" content="width=device-width, inital-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
         <title>Calculator</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="stylesheets/reset.css"/>
         <link rel="stylesheet" href="stylesheets/style.css"/>
+
     </head>    
     <body>
         <main id="background">
@@ -25,8 +28,7 @@
                 <div id="display">0</div>
             </div>                    
             <div id="buttons">
-                <div id="numbers">
-                    
+                <div id="numbers">                    
                         <button class="number" id="seven" name="7">
                             <div class="number-inner">7</div> 
                         </button>
@@ -55,7 +57,7 @@
                             <div class="number-inner">3</div> 
                         </button>
                         <button class="number" id="zero" name="0">
-                            <div class="number-inner">0</div> 
+                            <div id="zero-inner">0</div> 
                         </button>
                         <button class="number" id="decimal" name=".">
                             <div class="number-inner">.</div> 
