fixed some stlye incompatibilites

--- a/index.html
+++ b/index.html
@@ -23,45 +23,23 @@
                         <div class="solar-panel"></div>
                         <div class="solar-panel"></div>
                     </div>  
-                </div>             
+                </div>            
             <div id="display-frame">
                 <div id="display">0</div>
             </div>                    
             <div id="buttons">
                 <div id="numbers">                    
-                        <button class="number" id="seven" name="7">
-                            <div class="number-inner">7</div> 
-                        </button>
-                        <button class="number" id="eight" name="8">
-                            <div class="number-inner">8</div> 
-                        </button>
-                        <button class="number" id="nine" name="9">
-                            <div class="number-inner">9</div> 
-                        </button>
-                        <button class="number" id="four" name="4">
-                            <div class="number-inner">4</div> 
-                        </button>
-                        <button class="number" id="five" name="5">
-                            <div class="number-inner">5</div> 
-                        </button>
-                        <button class="number" id="six" name="6">
-                            <div class="number-inner">6</div> 
-                        </button>
-                        <button class="number" id="one" name="1">
-                            <div class="number-inner">1</div> 
-                        </button>
-                        <button class="number" id="two" name="2">
-                            <div class="number-inner">2</div> 
-                        </button>
-                        <button class="number" id="three" name="3">
-                            <div class="number-inner">3</div> 
-                        </button>
-                        <button class="number" id="zero" name="0">
-                            <div id="zero-inner">0</div> 
-                        </button>
-                        <button class="number" id="decimal" name=".">
-                            <div class="number-inner">.</div> 
-                        </button>
+                        <button class="number" id="seven" name="7">7</button>
+                        <button class="number" id="eight" name="8">8</button>
+                        <button class="number" id="nine" name="9">9</button>
+                        <button class="number" id="four" name="4">4</button>
+                        <button class="number" id="five" name="5">5</button>
+                        <button class="number" id="six" name="6">6</button>
+                        <button class="number" id="one" name="1">1</button>
+                        <button class="number" id="two" name="2">2</button>
+                        <button class="number" id="three" name="3">3</button>
+                        <button class="number" id="zero" name="0">0</button>
+                        <button class="number" id="decimal" name=".">.</button>
                 </div>
                 <div id="functions">
                     <button class="modify func-row1" id="clear" name="C">C</button>
