--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <div id="functions">
                     <button class="modify func-row1" id="clear" name="C">C</button>
                     <button class="modify func-row1" id="clear-all" name="CE">CE</button>
-                    <button class="modify func-row2" id="square" name="square">^2</button>
-                    <button class="modify func-row2" id="square-root" name="Math.sqrt()">sqrt</button>
+                    <button class="modify func-row2" id="square" name="square">x&sup2</button>
+                    <button class="modify func-row2" id="square-root" name="Math.sqrt()">&#8730x</button>
                     <button class="function func-row3" id="multiply" name="*">x</button>
                     <button class="function func-row3" id="divide" name="/">%</button>
                     <button class="function func-row4" id="plus" name="+">+</button>
